Update to 1.19.4 and allow display entities